--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,9 @@
 [user]
-  name = d-inagaki 
-  email =  chanc.euse.0302@gmail.com 
+  name = daisuke-inagaki
+  email = 
 [core]
   editor = vim
+	excludesfile = /Users/inagaki/.gitignore_global
 [color]
   ui = true
 [merge]
@@ -20,6 +21,7 @@
   cim = commit --amend
   st = status
   sh = show
+  ad = add
   br = branch
   ss = stash save
   sp = stash pop
@@ -38,3 +40,9 @@
   ## simple  : Git 2.0 でデフォルトになる予定のもの。カレントブランチに追跡ブランチが設定されている、かつローカルとリモートのブランチ名が同じである場合に、追跡ブランチに対してpushする。これが一番安全らしい。。
   ## current : カレントブランチと同名のリモートブランチがあれば、そこに push する。
   default = simple
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
