:recylce: 文字化けを修正

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,135 +1,135 @@
-# prefix¥­¡¼¤òC-b¤ËÊÑ¹¹¤¹¤ë
+# prefixã‚­ãƒ¼ã‚’C-bã«å¤‰æ›´ã™ã‚‹
 #set-option -g prefix C-b
 set -g prefix C-\\
 
-# ¥­¡¼¥¹¥È¥í¡¼¥¯¤Î¥Ç¥£¥ì¥¤¤ò¸º¤é¤¹
+# ã‚­ãƒ¼ã‚¹ãƒˆãƒ­ãƒ¼ã‚¯ã®ãƒ‡ã‚£ãƒ¬ã‚¤ã‚’æ¸›ã‚‰ã™
 set -sg escape-time 1
- 
-# ¥¦¥£¥ó¥É¥¦¤Î¥¤¥ó¥Ç¥Ã¥¯¥¹¤ò1¤«¤é»Ï¤á¤ë
+
+# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã®ã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹ã‚’1ã‹ã‚‰å§‹ã‚ã‚‹
 set -g base-index 1
- 
-# ¥Ú¥¤¥ó¤Î¥¤¥ó¥Ç¥Ã¥¯¥¹¤ò1¤«¤é»Ï¤á¤ë
+
+# ãƒšã‚¤ãƒ³ã®ã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹ã‚’1ã‹ã‚‰å§‹ã‚ã‚‹
 setw -g pane-base-index 1
- 
-# | ¤Ç¥Ú¥¤¥ó¤ò½Ä¤ËÊ¬³ä¤¹¤ë
+
+# | ã§ãƒšã‚¤ãƒ³ã‚’ç¸¦ã«åˆ†å‰²ã™ã‚‹
 bind | split-window -h
- 
-# - ¤Ç¥Ú¥¤¥ó¤ò²£¤ËÊ¬³ä¤¹¤ë
+
+# - ã§ãƒšã‚¤ãƒ³ã‚’æ¨ªã«åˆ†å‰²ã™ã‚‹
 bind - split-window -v
- 
-# Vim¤Î¥­¡¼¥Ğ¥¤¥ó¥É¤Ç¥Ú¥¤¥ó¤ò°ÜÆ°¤¹¤ë
+
+# Vimã®ã‚­ãƒ¼ãƒã‚¤ãƒ³ãƒ‰ã§ãƒšã‚¤ãƒ³ã‚’ç§»å‹•ã™ã‚‹
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
- 
-# Vim¤Î¥­¡¼¥Ğ¥¤¥ó¥É¤Ç¥Ú¥¤¥ó¤ò¥ê¥µ¥¤¥º¤¹¤ë
+
+# Vimã®ã‚­ãƒ¼ãƒã‚¤ãƒ³ãƒ‰ã§ãƒšã‚¤ãƒ³ã‚’ãƒªã‚µã‚¤ã‚ºã™ã‚‹
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
- 
-# ¥­¡¼¥Ğ¥¤¥ó¥É¡Ê¥³¥Ô¡¼¥â¡¼¥É¡Ë
- 
+
+# ã‚­ãƒ¼ãƒã‚¤ãƒ³ãƒ‰ï¼ˆã‚³ãƒ”ãƒ¼ãƒ¢ãƒ¼ãƒ‰ï¼‰
+
 bind Space copy-mode
 bind p paste-buffer
- 
-# ¥Ş¥¦¥¹Áàºî¤òÍ­¸ú¤Ë¤¹¤ë
+
+# ãƒã‚¦ã‚¹æ“ä½œã‚’æœ‰åŠ¹ã«ã™ã‚‹
 set-option -g mouse on
- 
-# 256¿§Ã¼Ëö¤ò»ÈÍÑ¤¹¤ë
+
+# 256è‰²ç«¯æœ«ã‚’ä½¿ç”¨ã™ã‚‹
 set -g default-terminal "screen-256color"
- 
-# ¥¹¥Æ¡¼¥¿¥¹¥Ğ¡¼¤Î¿§¤òÀßÄê¤¹¤ë
+
+# ã‚¹ãƒ†ãƒ¼ã‚¿ã‚¹ãƒãƒ¼ã®è‰²ã‚’è¨­å®šã™ã‚‹
 set -g status-fg white
 set -g status-bg black
- 
-# ¥¦¥£¥ó¥É¥¦¥ê¥¹¥È¤Î¿§¤òÀßÄê¤¹¤ë
+
+# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãƒªã‚¹ãƒˆã®è‰²ã‚’è¨­å®šã™ã‚‹
 setw -g window-status-activity-style bg="default","underscore",fg="cyan"
-# ¥¢¥¯¥Æ¥£¥Ö¤Ê¥¦¥£¥ó¥É¥¦¤òÌÜÎ©¤¿¤»¤ë
+# ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ãªã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’ç›®ç«‹ãŸã›ã‚‹
 setw -g window-status-current-style bg="red","bright",fg="white"
 
 
-# ¥Ú¥¤¥ó¥Ü¡¼¥À¡¼¤Î¿§¤òÀßÄê¤¹¤ë
+# ãƒšã‚¤ãƒ³ãƒœãƒ¼ãƒ€ãƒ¼ã®è‰²ã‚’è¨­å®šã™ã‚‹
 set -g pane-border-style bg="black",fg="green"
 
 
-# ¥¢¥¯¥Æ¥£¥Ö¤Ê¥Ú¥¤¥ó¤òÌÜÎ©¤¿¤»¤ë
+# ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ãªãƒšã‚¤ãƒ³ã‚’ç›®ç«‹ãŸã›ã‚‹
 set -g pane-active-border-style bg="yellow",fg="white"
 
-# ¥³¥Ş¥ó¥É¥é¥¤¥ó¤Î¿§¤òÀßÄê¤¹¤ë
+# ã‚³ãƒãƒ³ãƒ‰ãƒ©ã‚¤ãƒ³ã®è‰²ã‚’è¨­å®šã™ã‚‹
 set -g message-style bg="black","bright",fg="white"
- 
-# ¥³¥Ô¡¼¥â¡¼¥É¤òÀßÄê¤¹¤ë
-## vi¤Î¥­¡¼¥Ğ¥¤¥ó¥É¤ò»ÈÍÑ¤¹¤ë
+
+# ã‚³ãƒ”ãƒ¼ãƒ¢ãƒ¼ãƒ‰ã‚’è¨­å®šã™ã‚‹
+## viã®ã‚­ãƒ¼ãƒã‚¤ãƒ³ãƒ‰ã‚’ä½¿ç”¨ã™ã‚‹
 setw -g mode-keys vi
-## ¥¯¥ê¥Ã¥×¥Ü¡¼¥É¶¦Í­¤òÍ­¸ú¤Ë¤¹¤ë
+## ã‚¯ãƒªãƒƒãƒ—ãƒœãƒ¼ãƒ‰å…±æœ‰ã‚’æœ‰åŠ¹ã«ã™ã‚‹
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-## ¥³¥Ô¡¼¥â¡¼¥É¤ÎÁàºî¤òviÉ÷¤ËÀßÄê¤¹¤ë
+## ã‚³ãƒ”ãƒ¼ãƒ¢ãƒ¼ãƒ‰ã®æ“ä½œã‚’vié¢¨ã«è¨­å®šã™ã‚‹
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-### ¥³¥Ô¡¼¥â¡¼¥ÉÃæ C-v ¤Ç¶ë·ÁÁªÂò³«»Ï
+### ã‚³ãƒ”ãƒ¼ãƒ¢ãƒ¼ãƒ‰ä¸­ C-v ã§çŸ©å½¢é¸æŠé–‹å§‹
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-### 1¹ÔÁªÂò
+### 1è¡Œé¸æŠ
 bind-key -T copy-mode-vi V send-keys -X select-line
 bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-### 1¹Ô¥³¥Ô¡¼
+### 1è¡Œã‚³ãƒ”ãƒ¼
 bind-key -T copy-mode-vi Y send-keys copy-line
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-### Esc ¥­¡¼¤Ç¥³¥Ô¡¼¤ÎÈ¿Å¾¤ò²ò½ü¡Ê¥³¥Ô¡¼¥â¡¼¥É¤ÏÈ´¤±¤Ê¤¤¡Ë
+### Esc ã‚­ãƒ¼ã§ã‚³ãƒ”ãƒ¼ã®åè»¢ã‚’è§£é™¤ï¼ˆã‚³ãƒ”ãƒ¼ãƒ¢ãƒ¼ãƒ‰ã¯æŠœã‘ãªã„ï¼‰
 bind-key -T copy-mode-vi Escape send-keys -X clear-selection
-### Ctrl-c ¥­¡¼¤Ç¥³¥Ô¡¼¤ÎÈ¿Å¾¤ò²ò½ü¤·¡¢¥³¥Ô¡¼¥â¡¼¥É¤«¤éÈ´¤±¤ë
+### Ctrl-c ã‚­ãƒ¼ã§ã‚³ãƒ”ãƒ¼ã®åè»¢ã‚’è§£é™¤ã—ã€ã‚³ãƒ”ãƒ¼ãƒ¢ãƒ¼ãƒ‰ã‹ã‚‰æŠœã‘ã‚‹
 bind-key -T copy-mode-vi C-c send-keys -X cancel
-### Vi ¥â¡¼¥ÉÃæ¤Ë Ctrl-a ¤Ç¹ÔÆ¬¤Ë¡ÊEmacs ¥é¥¤¥¯¡Ë
+### Vi ãƒ¢ãƒ¼ãƒ‰ä¸­ã« Ctrl-a ã§è¡Œé ­ã«ï¼ˆEmacs ãƒ©ã‚¤ã‚¯ï¼‰
 bind-key -T copy-mode-vi C-a send-keys -X start-of-line
-### Vi ¥â¡¼¥ÉÃæ¤Ë Ctrl-e ¤Ç¹ÔËö¤Ë¡ÊEmacs ¥é¥¤¥¯¡Ë
+### Vi ãƒ¢ãƒ¼ãƒ‰ä¸­ã« Ctrl-e ã§è¡Œæœ«ã«ï¼ˆEmacs ãƒ©ã‚¤ã‚¯ï¼‰
 bind-key -T copy-mode-vi C-e send-keys -X end-of-line
-### Ã±¸ì¤ÎºÇ½é¤Î1Ê¸»ú¤Ë°ÜÆ°
+### å˜èªã®æœ€åˆã®1æ–‡å­—ã«ç§»å‹•
 bind-key -T copy-mode-vi w send-keys -X next-word
-### Ã±¸ì¤ÎºÇ¸å¤Î1Ê¸»ú¤Ë°ÜÆ°
+### å˜èªã®æœ€å¾Œã®1æ–‡å­—ã«ç§»å‹•
 bind-key -T copy-mode-vi e send-keys -X next-word-end
-### w ¤ÎµÕ¤ÎÆ°¤­ back
+### w ã®é€†ã®å‹•ã back
 bind-key -T copy-mode-vi b send-keys -X previous-word
-### ²èÌÌ¾å¤Ë±Ç¤ëºÇ¾å¹Ô¤Ë°ÜÆ°
+### ç”»é¢ä¸Šã«æ˜ ã‚‹æœ€ä¸Šè¡Œã«ç§»å‹•
 bind-key -T copy-mode-vi g send-keys -X top-line
-### ²èÌÌ¾å¤Ë±Ç¤ëºÇ²¼¹Ô¤Ë°ÜÆ°
+### ç”»é¢ä¸Šã«æ˜ ã‚‹æœ€ä¸‹è¡Œã«ç§»å‹•
 bind-key -T copy-mode-vi G send-keys -X bottom-line
-### Á°Êı¸¡º÷
+### å‰æ–¹æ¤œç´¢
 bind-key -T copy-mode-vi / send-keys -X search-forward
-### ¸åÊı¸¡º÷
+### å¾Œæ–¹æ¤œç´¢
 bind-key -T copy-mode-vi ? send-keys -X search-backward
-### ¥Ú¡¼¥¸¥¹¥¯¥í¡¼¥ë
+### ãƒšãƒ¼ã‚¸ã‚¹ã‚¯ãƒ­ãƒ¼ãƒ«
 bind-key -T copy-mode-vi C-n send-keys -X page-up
 bind-key -T copy-mode-vi C-f send-keys -X page-down
-### ¥Ú¡¼¥¸Á÷¤ê
+### ãƒšãƒ¼ã‚¸é€ã‚Š
 bind-key -T copy-mode-vi C-u send-keys -X scroll-up
 bind-key -T copy-mode-vi C-d send-keys -X scroll-down
- 
-# ¥¹¥Æ¡¼¥¿¥¹¥Ğ¡¼¤òÀßÄê¤¹¤ë
-## ¥¹¥Æ¡¼¥¿¥¹¥Ğ¡¼¤ò¥È¥Ã¥×¤ËÇÛÃÖ¤¹¤ë
+
+# ã‚¹ãƒ†ãƒ¼ã‚¿ã‚¹ãƒãƒ¼ã‚’è¨­å®šã™ã‚‹
+## ã‚¹ãƒ†ãƒ¼ã‚¿ã‚¹ãƒãƒ¼ã‚’ãƒˆãƒƒãƒ—ã«é…ç½®ã™ã‚‹
 set-option -g status-position top
- 
-## º¸¥Ñ¥Í¥ë¤òÀßÄê¤¹¤ë
-### #H => ¥Ş¥·¥óÌ¾
-### #P => ¥Ú¥¤¥óÈÖ¹æ
-### ºÇº¸¤ËÉ½¼¨
+
+## å·¦ãƒ‘ãƒãƒ«ã‚’è¨­å®šã™ã‚‹
+### #H => ãƒã‚·ãƒ³å
+### #P => ãƒšã‚¤ãƒ³ç•ªå·
+### æœ€å·¦ã«è¡¨ç¤º
 set -g status-left-length 90
 set-option -g status-left '#[fg=green]Session: #S #[fg=yellow]#I #H:[#P]'
- 
-## ±¦¥Ñ¥Í¥ë¤òÀßÄê¤¹¤ë
-### ¥Ğ¥Ã¥Æ¥ê¡¼»ÄÎÌ¡¢¸½ºß»ş¹ï
-### ºÇ±¦¤ËÉ½¼¨
+
+## å³ãƒ‘ãƒãƒ«ã‚’è¨­å®šã™ã‚‹
+### ãƒãƒƒãƒ†ãƒªãƒ¼æ®‹é‡ã€ç¾åœ¨æ™‚åˆ»
+### æœ€å³ã«è¡¨ç¤º
 set-option -g status-right-length 200
 set-option -g status-right '#(battery -t) [%Y-%m-%d(%a) %H:%M]'
- 
-## ¥¹¥Æ¡¼¥¿¥¹¥Ğ¡¼¤ò1ÉÃËè¤ËÉÁ²è¤·Ä¾¤¹
+
+## ã‚¹ãƒ†ãƒ¼ã‚¿ã‚¹ãƒãƒ¼ã‚’1ç§’æ¯ã«æç”»ã—ç›´ã™
 set-option -g status-interval 1
- 
-## ¥¦¥£¥ó¥É¥¦¥ê¥¹¥È¤Î°ÌÃÖ¤òÃæ¿´´ó¤»¤Ë¤¹¤ë
+
+## ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãƒªã‚¹ãƒˆã®ä½ç½®ã‚’ä¸­å¿ƒå¯„ã›ã«ã™ã‚‹
 set-option -g status-justify centre
- 
-## ¥ô¥£¥¸¥å¥¢¥ë¥Î¡¼¥Æ¥£¥Õ¥£¥±¡¼¥·¥ç¥ó¤òÍ­¸ú¤Ë¤¹¤ë
+
+## ãƒ´ã‚£ã‚¸ãƒ¥ã‚¢ãƒ«ãƒãƒ¼ãƒ†ã‚£ãƒ•ã‚£ã‚±ãƒ¼ã‚·ãƒ§ãƒ³ã‚’æœ‰åŠ¹ã«ã™ã‚‹
 setw -g monitor-activity on
 set -g visual-activity on
